fix: change z-index for overlay and popup

--- a/shelter/sass/style.css
+++ b/shelter/sass/style.css
@@ -781,7 +781,7 @@ h5 {
 }
 
 .overlay {
-  z-index: 1;
+  z-index: 5;
   position: fixed;
   top: 0;
   left: 0;
@@ -1118,7 +1118,7 @@ h5 {
 
 .header-pets {
   position: fixed;
-  z-index: 100;
+  z-index: 5;
   width: 100%;
   background: #FFFFFF;
 }
